# API-TUSSAM

./: .dockerignore  .gitignore  CHANGELOG.md  CNAME  Dockerfile  LICENSE  README.md  app.js  docker-compose.yml  docs.html  index.html  lineas.json  nginx.conf  paradas.html  paradas.js  paradas.json  pyproject.toml  robots.txt  security_best_practices_report.md  sitemap.xml  social-card.html  styles.css  validate.py
.github/workflows/: docker-publish.yml
app/: __init__.py  database.py  env.py  main.py  scheduler.py
app/services/: __init__.py  tussam.py
data/: tussam.db
docs/: API.md  docker.md
examples/smoke-app/: index.html
landing/: aviso-legal.html  common.css  cookies.html  index.html  privacidad.html
scripts/: geocode_paradas.py  scan_changes.py
tests/: __init__.py  conftest.py  test_database.py  test_e2e.py  test_main.py  test_scheduler.py  test_tussam_service.py
