[project]
name = "tussam-api"
version = "1.0.1"
description = "API para horarios y paradas de TUSSAM (Sevilla)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "686f6c61"}
]
keywords = ["tussam", "sevilla", "bus", "transit", "api", "applewatch"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.26.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
