[project]
name = "tussam-api"
version = "2.0.0"
description = "API para horarios y paradas de TUSSAM (Sevilla)"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [
    {name = "686f6c61"}
]
keywords = ["tussam", "sevilla", "bus", "transit", "api", "realtime"]
# PolyForm Noncommercial no es una licencia aprobada por la OSI, por lo que NO se
# usa el clasificador "License :: OSI Approved"; la licencia se declara arriba.
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.26.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

# setuptools >= 77 es necesario para la expresión de licencia SPDX (PEP 639)
# usada en [project].license (LicenseRef-PolyForm-Noncommercial-1.0.0).
[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"
